last minute bugfixing

--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -509,24 +509,24 @@
  UaCH.91.d: "The Lords of [From.GetName] have sworn to support our cause, and have chosen to become a loyal subject of ours."
  UaCH.91.a: "Their aid is appreciated!"
  
- UaCH.92.t:0"The river runs dry"
- UaCH.92.d:0"My liege, we have received news. The river in our province has dried up, causing a major uproar. Without acces to fresh water, our communities will suffer immensely, and may even decide to abandon our city. We should immediately send out people to dig up new wells."
- UaCH.92.a:0"Most certainly."
- UaCH.92.b:0"Let us pray for rain."
- mitigated_drought:0"Mitigated drought"
- minor_drought:0"Minor drought"
- moderate_drought:0"Moderate drought"
+ UaCH.92.t: "The river runs dry"
+ UaCH.92.d: "My liege, we have received news. The river in our province has dried up, causing a major uproar. Without acces to fresh water, our communities will suffer immensely, and may even decide to abandon our city. We should immediately send out people to dig up new wells."
+ UaCH.92.a: "Most certainly."
+ UaCH.92.b: "Let us pray for rain."
+ mitigated_drought: "Mitigated drought"
+ minor_drought: "Minor drought"
+ moderate_drought: "Moderate drought"
  
- UaCH.94.t:0"The drought is ongoing"
- UaCH.94.d:0"My liege, we have received news. Despite our efforts to dig new wells, it seems we have yet to be successful. The people are getting worried by the day, rationing is already on."
- UaCH.94.a:0"Dig harder."
- UaCH.94.b:0"This is the doing of those..."
+ UaCH.94.t: "The drought is ongoing"
+ UaCH.94.d: "My liege, we have received news. Despite our efforts to dig new wells, it seems we have yet to be successful. The people are getting worried by the day, rationing is already on."
+ UaCH.94.a: "Dig harder."
+ UaCH.94.b: "This is the doing of those..."
  
- UaCH.95.t:0"Catastrophe"
- UaCH.95.d:0"My liege, we have received the most grave news! The people in our drought stricken land have decided to move. Unless something is done immediately, we might even lose the city!"
- UaCH.95.a:0"D-I-G! WHAT DOES THAT SPELL?"
- UaCH.95.b:0"This place reeks of death, there is chill in the air..."
- uach_city_lose:0"This province will be §RABANDONED§!. Without recolonization, people may not return here!"
+ UaCH.95.t: "Catastrophe"
+ UaCH.95.d: "My liege, we have received the most grave news! The people in our drought stricken land have decided to move. Unless something is done immediately, we might even lose the city!"
+ UaCH.95.a: "D-I-G! WHAT DOES THAT SPELL?"
+ UaCH.95.b: "This place reeks of death, there is chill in the air..."
+ uach_city_lose: "This province will be §RABANDONED§!. Without recolonization, people may not return here!"
  UaCH.96.t: "The Succession Crisis"
  UaCH.96.d: "Our pitiful attempts to reform the state have failed completely. We have seen the collapse of our regime on the horizon for years, and were powerless to stop it. Now, it is finally here. Today, the Emperor receieved the news: one by one, his vassals had declared their independence, and from some, the intention to capture the Timurid Throne for themselves. \n\nThe flame has been ignited, and may grow into a firestorm burning the Empire of Timur down."
  UaCH.96.a: "Our state has failed in peace; may it be victorious in war"
@@ -542,7 +542,7 @@
  UaCH.105.a: "Go Back"
  UaCH.105.b: "To War!"
  UaCH.99.t: "Upon a Crimson Horse: Reformation Mechanics"
- UaCH.99.d: "§RIf this is your first time playing the 'Upon a Crimson Horse' mod, it may be helpful to read this explanation.§!\n\nCongratulations! You have successfully stabilized the Timurid Realm by §GReclaiming Timur's Legacy§! Your troubles are now all over. Wait, what's that? Another ticking disaster? What is going on, I thought we just won?\n\nHistorically, the Second Timurid Succession Crisis was shortly followed by the Third Timurid Succession Crisis, a much longer and more devestating version of the same, which lasted until the state was conquered fully by outside powers. In 'Upon a Crimson Horse', this is modeled through a repeatable disaster, that slowly ticks up after you §GReclaim Timur's Legacy§! and will keep firing until the government is reformed, or until the Timurid Realm is fully conquered by outside powers. So then, how does one reform the state and escape this cycle?\n\nA new government mechanic has appeared in your state. Through this meter, your level of Persianization, you have two paths forward to reform. At 100 Persianization, you will be able to reform into a centralized, Persian state, and leave the legacy of the Timurids far behind you. At -100 Persianization, you will be able to realize Timur's ambition, and become a centralized Horde in the image of your Mongol ancestors. Choose your path wisely: once you commit to one, you will not have enough time to switch before the disaster strikes.\n\nWill you reform at any cost, or will your state once again succumb to a devestating succession Crisis?\n\n§RYou may notice a 'bug' in your tier 2 government reform. This is a paradox bug and is the only way to implement the persianization feature without a crash. You will get your normal tier 2 reform back soon!§!\n\n§RIf you do NOT see the new government reforms in your government tab, please save and reload your game, or at worst, an older autosave. This is a rare bug that can occur.§!"
+ UaCH.99.d: "§RIf this is your first time playing the 'Upon a Crimson Horse' mod, it may be helpful to read this explanation.§!\n\nCongratulations! You have successfully stabilized the Timurid Realm by §GReclaiming Timur's Legacy§! Your troubles are now all over. Wait, what's that? Another ticking disaster? What is going on, I thought we just won?\n\nHistorically, the Second Timurid Succession Crisis was shortly followed by the Third Timurid Succession Crisis, a much longer and more devestating version of the same, which lasted until the state was conquered fully by outside powers. In 'Upon a Crimson Horse', this is modeled through a repeatable disaster, that slowly ticks up after you §GReclaim Timur's Legacy§! and will keep firing until the government is reformed, or until the Timurid Realm is fully conquered by outside powers. So then, how does one reform the state and escape this cycle?\n\nA new government mechanic has appeared in your state. Through this meter, your level of Persianization, you have two paths forward to reform. At §G100§! Persianization, you will be able to reform into a centralized, Persian state, and leave the legacy of the Timurids far behind you. At §R-100§! Persianization, you will be able to realize Timur's ambition, and become a centralized Horde in the image of your Mongol ancestors. Choose your path wisely: once you commit to one, you will not have enough time to switch before the disaster strikes.\n\nWill you reform at any cost, or will your state once again succumb to a devestating succession Crisis?\n\n§RYou may notice a 'bug' in your tier 2 government reform. This is a paradox bug and is the only way to implement the persianization feature without a crash. You will get your normal tier 2 reform back soon!§!\n\n§RIf you do NOT see the new government mechanics (the Persianization Meter) in your government tab, please save and reload your game, or at worst, an older autosave. This is a rare bug that can occur.§!"
  UaCH.99.a: "Peace in our Time."
  UaCH.100.t: "Victory in War"
  UaCH.100.d: "Each victory on the battlefield brings us closer to Timur's Vision for the future. War is our natural state, and peace is a curse; we would do well to remember this fact."
