We fucking done it
Missing SLU, BDK idea sets, minor fixes
(no -20 years of separatism, Mr. Maymana)

--- a/UaCH/localisation/UaCH_ideas_l_english.yml
+++ b/UaCH/localisation/UaCH_ideas_l_english.yml
@@ -17,59 +17,93 @@
  BLK_ideas_start:0 "Balkh traditions"
  BLK_ideas_bonus:0 "Balkh ambition"
  
- yzd_idea_1:0 "Marco Polos Great and Noble City"
- yzd_idea_1_desc:0 "Before Genghis and his horde came to our city, its splendor was so great, that even the great traveller Marco Polo has named us 'The Great and Noble City' in his memoirs."
- yzd_idea_2:0 "Trade hub"
- yzd_idea_2desc:0 "Our city was always an important trade hub along the Silk Road"
- yzd_idea_3:0 "Legacy of Bactria"
- yzd_idea_3_desc:0 "A millennia ago, Balkh was among the most important cities of the Bactrian empire. This legacy should not only be remembered, but emulated."
- yzd_idea_4:0 "Umm al Bilad"
- yzd_idea_4_desc:0 "Being one of the oldest cities in Persia, no wonder the conquering Arabs named Balkh Umm-al-Bilad, the Mother of Cities."
- yzd_idea_5:0 "Nation of crossroads"
- yzd_idea_5_desc:0 "Our nation is built on the crossroad of many civilizations and cultures."
- yzd_idea_6:0 "Prepared messengers"
- yzd_idea_6_desc:0 "Genghis khan has taught us one very important lesson : being fast is the key. Our messengers stand ready to delivery messages every hour of the day."
- yzd_idea_7:0 "Rebuilding effort"
- yzd_idea_7_desc:0 "Shah Rukh has expended considerable effort to restore the citadel of Balkh."
+ yzd_idea_3:0 "Sar Yazd Castle"
+ yzd_idea_3_desc:0 "Amidst the unforgiving desert, our fortresses stand as bastions of endurance.Chief among them is the Sar Yazd Castle, an ancient fortress of the Sassanids, standing the test of time."
+ yzd_idea_4:0 "Qanats of Prosperity"
+ yzd_idea_4_desc:0 "Beneath the arid earth, our qanat irrigation sustains fields of abundance, supplying our city and troops with fresh water even in the greatest drought."
+ yzd_idea_5:0 "Stargazers of Yazd"
+ yzd_idea_5_desc:0 "The Zoroastrians have revered the Sun and the Stars, and the practice of stargazing has snuck into our culture. Atop our ancient observatories, we decipher the celestial tapestry, unraveling the mystical secrets of our world."
+ yzd_idea_6:0 "Diplomatic Fortitude"
+ yzd_idea_6_desc:0 "In the hallowed halls of Ahmadabad, our envoys weave webs of alliance and intrigue, shaping the destiny of nations. "
+ yzd_idea_7:0 "Dahouk Mosque"
+ yzd_idea_7_desc:0 "Also known as the Amir Chakhmaq Complex, this religious establishment has finished building in 1438 under Jalal-al-Din Amir-Chakhmaq's watchful eyes."
  YZD_ideas:0 "Yazdi ideas"
  YZD_ideas_start:0 "Yazdi traditions"
  YZD_ideas_bonus:0 "Yazdi ambition"
  
- isf_idea_1:0 "Marco Polos Great and Noble City"
- isf_idea_1_desc:0 "Before Genghis and his horde came to our city, its splendor was so great, that even the great traveller Marco Polo has named us 'The Great and Noble City' in his memoirs."
- isf_idea_2:0 "Trade hub"
- isf_idea_2desc:0 "Our city was always an important trade hub along the Silk Road"
- isf_idea_3:0 "Legacy of Bactria"
- isf_idea_3_desc:0 "A millennia ago, Balkh was among the most important cities of the Bactrian empire. This legacy should not only be remembered, but emulated."
- isf_idea_4:0 "Umm al Bilad"
- isf_idea_4_desc:0 "Being one of the oldest cities in Persia, no wonder the conquering Arabs named Balkh Umm-al-Bilad, the Mother of Cities."
- isf_idea_5:0 "Nation of crossroads"
- isf_idea_5_desc:0 "idea 5 desc"
- isf_idea_6:0 "Prepared messengers"
- isf_idea_6_desc:0 "Genghis khan has taught us one very important lesson : being fast is the key. Our messengers stand ready to delivery messages every hour of the day."
- isf_idea_7:0 "Rebuilding effort"
- isf_idea_7_desc:0 "Shah Rukh has expended considerable effort to restore the citadel of Balkh."
+ isf_idea_1:0 "Bridge of Thirty-Three Arches"
+ isf_idea_1_desc:0 "Across the Zayanderud River's gentle embrace, the Bridge of Khaju spans time and space, connecting our lands with swiftness and grace."
+ isf_idea_2:0 "City of Splendors"
+ isf_idea_2_desc:0 "Amidst the azure domes and verdant gardens, Isfahan shines as a beacon of prestige and diplomacy. Beneath the ornate arches and bustling markets, our coffers overflow with wealth and prosperity."
+ isf_idea_3:0 "Qanat System"
+ isf_idea_3_desc:0 "Beneath the parched earth, our qanat system channels life-giving waters, sustaining fields of plenty and abundance."
+ isf_idea_4:0 "Palace of Forty Columns"
+ isf_idea_4_desc:0 "From the opulent halls of the Ali Qapu to the tranquil gardens of Chehel Sotoun, our diplomatic envoys weave alliances as enduring as our ancient architecture."
+ isf_idea_5:0 "Jalal-al-Din Amir-Chakhmaq' Legacy"
+ isf_idea_5_desc:0 "In the wake of Jalal-al-Din Amir-Chakhmaq' visionary reign, architecture and arts are on the path of rising. "
+ isf_idea_6:0 "Isfahani Architecture"
+ isf_idea_6_desc:0 "Like the towering walls that encircle our city, our fortifications stand as bastions of strength, impervious to the whims of fate."
+ isf_idea_7:0 "Silk Road Hub"
+ isf_idea_7_desc:0 "Like the coursing river that sustains our lands, our trade routes flow with riches from distant realms."
  ISF_ideas:0 "Isfahani ideas"
  ISF_ideas_start:0 "Isfahani traditions"
  ISF_ideas_bonus:0 "Isfahani ambition"
  
- krm_idea_1:0 "Marco Polos Great and Noble City"
- krm_idea_1_desc:0 "Before Genghis and his horde came to our city, its splendor was so great, that even the great traveller Marco Polo has named us 'The Great and Noble City' in his memoirs."
- krm_idea_2:0 "Trade hub"
- krm_idea_2desc:0 "Our city was always an important trade hub along the Silk Road"
- krm_idea_3:0 "Legacy of Bactria"
- krm_idea_3_desc:0 "A millennia ago, Balkh was among the most important cities of the Bactrian empire. This legacy should not only be remembered, but emulated."
- krm_idea_4:0 "Umm al Bilad"
- krm_idea_4_desc:0 "Being one of the oldest cities in Persia, no wonder the conquering Arabs named Balkh Umm-al-Bilad, the Mother of Cities."
- krm_idea_5:0 "Nation of crossroads"
- krm_idea_5_desc:0 "idea 5 desc"
- krm_idea_6:0 "Prepared messengers"
- krm_idea_6_desc:0 "Genghis khan has taught us one very important lesson : being fast is the key. Our messengers stand ready to delivery messages every hour of the day."
- krm_idea_7:0 "Rebuilding effort"
- krm_idea_7_desc:0 "Shah Rukh has expended considerable effort to restore the citadel of Balkh."
+ krm_idea_1:0 "Desert Strongholds"
+ krm_idea_1_desc:0 "Amidst the harsh expanse of the Dasht-e Lut, our fortresses stand as bastions of strength, their towering walls a testament to our resilience. "
+ krm_idea_2:0 "Bam Citadel"
+ krm_idea_2_desc:0 "From the storied halls of Bam Citadel to the ancient bazaars of Kerman, our lineage is steeped in tales of valor and wisdom. "
+ krm_idea_3:0 "Tribal Allegiance"
+ krm_idea_3_desc:0 " In the vast reaches of our province, tribal loyalty runs deep, uniting our people in a bond of kinship and solidarity that strengthens our armies and fortifies our resolve. "
+ krm_idea_4:0 "Quanat"
+ krm_idea_4_desc:0 "Through centuries of ingenuity and innovation, our qanat systems harness the precious waters of the desert, transforming arid lands into fertile oases of abundance and plenty. "
+ krm_idea_5:0 "Scholarly Tradition"
+ krm_idea_5_desc:0 "Nurtured by the renowned scholars of Kerman's madrasas and libraries, our pursuit of knowledge is boundless, fueling our technological advancement and innovation."
+ krm_idea_6:0 "Mud-Brick Fortifications"
+ krm_idea_6_desc:0 "Crafted from the sun-baked mud of our desert homeland, our fortifications are as enduring as the ancient earth itself, providing steadfast defense against our adversaries. "
+ krm_idea_7:0 "Caravans of Dreams"
+ krm_idea_7_desc:0 "Along ancient routes, our caravans traverse, carrying with them the dreams of a nation."
  KRM_ideas:0 "Kermani ideas"
  KRM_ideas_start:0 "Kermani traditions"
  KRM_ideas_bonus:0 "Kermani ambition"
+ 
+ 
+ slu_idea_1:0 "Sword and Club"
+ slu_idea_1_desc:0 "Our tribesmen take pride in armed to the teeth. Not only with the traditional weaponry of horseback bows, but we are proefficient in using melee weapons."
+ slu_idea_2:0 "Oghuz-Turkmen"
+ slu_idea_2_desc:0 "While the bulk of our horsemen are made of Turkic raiders, we cannot be above assimilating other capable warriors into our host."
+ slu_idea_3:0 "Finest of horses"
+ slu_idea_3_desc:0 "Our life depends on the horse we sit on, so naturally we accept only the finest of them."
+ slu_idea_4:0 "Khans of the Yabgu"
+ slu_idea_4_desc:0 "For a long time, royal dignity remained in the Oghuz family; for so long the dignity of the sovereign was in the ancestral branch of Salyr, and after that other branches there were revered kings."
+ slu_idea_5:0 "The best thing in life"
+ slu_idea_5_desc:0 "To crush your enemies, see them driven before you, and to hear the lamentations of their women!"
+ slu_idea_6:0 "Lances of Salore"
+ slu_idea_6_desc:0 "With the Persian, we have fought, and learned. Quickness triumphs rigid battle lines, let us adapt this stratagem."
+ slu_idea_7:0 "From Karaman to Qinghai"
+ slu_idea_7_desc:0 "While most of our tribe has always lived in Central Asia, a few centuries back a good portion of our people have followed the Oghuz Turks to the West, while many among our younger advocate moving to the east. This gives us right to claim any land between as ours."
+ SLU_ideas:0 "Salyr ideas"
+ SLU_ideas_start:0 "Salyr traditions"
+ SLU_ideas_bonus:0 "Salyr ambition"
+ 
+ bdk_idea_1:0 "Nasir Khusraw's Legacy"
+ bdk_idea_1_desc:0 "Our land was the home of the great Ismaili teacher Nashir Khusraw. His words remain with us till this day."
+ bdk_idea_2:0 "Tajiks and Pamiris"
+ bdk_idea_2_desc:0 "Our country is made up by two different cultures, but unlike our neighbours, mostly living in harmony. "
+ bdk_idea_3:0 "Sar-e-Sang Mine"
+ bdk_idea_3_desc:0 "Lapis lazuli has been mined in the Sar-e-Sang mines for over 6,000 years. No king can call himself prestigious enough from the Indus to the Balkans, if the royal crown doesnt have it."
+ bdk_idea_4:0 "Valley of Khyber Pass"
+ bdk_idea_4_desc:0 "The Khyber Pass is considered one of the most famous mountain passes in the world, connecting our country to Afghanistan, while providing a fairly defendable position."
+ bdk_idea_5:0 "Harmony of Badakshan"
+ bdk_idea_5_desc:0 "Lutes are an extremely important part of Badakhshani music, especially the three-stringed shortneck lute played with a wooden plectrum; this is called the Pamiri rubab."
+ bdk_idea_6:0 "Airyanem Vaejah"
+ bdk_idea_6_desc:0 "Airyanem Vaejah is considered in Zoroastrianism to be the place where Zarathustra received the religion from Ahura Mazda. The importance of this event, even with the Zoroastrian's now being a minority can be used to further our goals."
+ bdk_idea_7:0 "Gates of Alexander"
+ bdk_idea_7_desc:0 "Our royal family can retrace their bloodline to Alexander the Great. This gives us legitimacy way beyond the heirs of Timur can ever dream of."
+ BDK_ideas:0 "Badakh ideas"
+ BDK_ideas_start:0 "Badakh traditions"
+ BDK_ideas_bonus:0 "Badakh ambition"
+ 
  
  U00_ideas_start:0"Kirkuk traditions"
  U00_ideas_bonus:0"Kirkuk ambition"
@@ -87,7 +121,7 @@
  U00_idea_6:0"Kirkuk idea 6"
  U00_idea_6_desc:0"Kirkuk idea 6"
  U00_idea_7:0"Beam me up, Scotty"
- U00_idea_7_desc:0"Kirkuk idea 7"
+ U00_idea_7_desc:0"We need more redshirts here."
 
  U01_ideas_start:0"Sulaimaniyah traditions"
  U01_ideas_bonus:0"Sulaimaniyah ambition"
