Fixing Our Position in the Crisis loc order

--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -152,8 +152,8 @@
  UaCH.26.t: "Our position in the Crisis"
  UaCH.26.d: "As §GAla-al Dawla Mirza§! has prepared to march west to confront §GAbul-Qasim Babur§!, the amirs of both princes urged them to ally, due to §GUlugh Beg's§! intents to conquer his rivals completely. This leads to Ala al-Dawla Mirza effectively having hegemony over most of the Timurid remains, though this wouldn't last."
  UaCH.26.a: "We maintain our allegiance to he who rules in Herat."
- UaCH.26.b: "The lords of Khorasan shall have our might!"
- UaCH.26.c: "He who rules in Samarkand shall lead us forward."
+ UaCH.26.b: "He who rules in Samarkand shall lead us forward."
+ UaCH.26.c: "The lords of Khorasan shall have our might!"
  UaCH.26.e: "This is our chance to expel the sons of Timur!"
  UaCH.26.f: "Let us follow Isfahan's example, and ride with Ajam!"
  UaCH.26.g: "Let us side with the lords of Fars."
