Less hacky disaster disable, prevent Persianizing/Mongolizing during a Succession Crisis.

--- a/UaCH/localisation/uach_gov_l_english.yml
+++ b/UaCH/localisation/uach_gov_l_english.yml
@@ -38,3 +38,4 @@
  uach_fully_persianize: "Persianize the State"
  uach_fully_persianize: "Shah Rukh had a vision for his empire: a civilized, stable, and above all Persian state. He put great focus on administering Persia, on fostering its culture and adopting its traditions into the Timurid state, and on increasing the prosperity of Iran. As the true heirs of Shah Rukh, it is up to us to realize this vision."
  monthly_uach_persianization: "Monthly Persianization"
+ NOT_SC_BITCH: "The Persianization mechanics are not available during the Succession Crisis."
