--- a/UaCH/localisation/UaCH_countries_l_english.yml
+++ b/UaCH/localisation/UaCH_countries_l_english.yml
@@ -224,3 +224,5 @@
  U68: "Urgench"
  U68_ADJ: "Urgenchan"
  U68_ADJ2: "Urgenchan"
+ KHWAREZMID:0 "Khwarezmid Empire"
+ KHWAREZMID_ADJ:0 "Khwarezmid"
